processor/src/fast/tests/snapshots/miden_processor__fast__tests__masm_consistency__fast__tests__masm_consistency__test_masm_consistency__case_09.snap
---
source: processor/src/fast/tests/masm_consistency.rs
expression: fast_stack_outputs
---
StackOutputs {
    elements: [
        30,
        16,
        16,
        16,
        16,
        16,
        16,
        21,
        16,
        16,
        16,
        16,
        16,
        16,
        16,
        16,
    ],
}
