processor/src/fast/tests/snapshots/miden_processor__fast__tests__masm_consistency__fast__tests__masm_consistency__test_masm_consistency__case_14.snap
---
source: processor/src/fast/tests/masm_consistency.rs
expression: fast_stack_outputs
---
StackOutputs {
    elements: [
        88,
        16,
        16,
        16,
        16,
        16,
        16,
        51,
        16,
        16,
        16,
        16,
        16,
        16,
        16,
        16,
    ],
}
