processor/src/fast/tests/snapshots/miden_processor__fast__tests__masm_consistency__fast__tests__masm_consistency__test_masm_consistency__case_18.snap
---
source: processor/src/fast/tests/masm_consistency.rs
expression: fast_stack_outputs
---
StackOutputs {
    elements: [
        16,
        16,
        16,
        16,
        16,
        16,
        16,
        32,
        16,
        16,
        16,
        16,
        16,
        16,
        0,
        0,
    ],
}
