processor/src/fast/tests/snapshots/miden_processor__fast__tests__masm_consistency__fast__tests__masm_consistency__test_masm_consistency__case_23.snap
---
source: processor/src/fast/tests/masm_consistency.rs
expression: fast_stack_outputs
---
StackOutputs {
    elements: [
        42,
        0,
        0,
        0,
        0,
        0,
        0,
        58,
        0,
        0,
        12,
        23,
        34,
        45,
        0,
        0,
    ],
}
