processor/src/fast/tests/snapshots/miden_processor__fast__tests__masm_consistency__fast__tests__masm_consistency__test_masm_consistency__case_25.snap
---
source: processor/src/fast/tests/masm_consistency.rs
assertion_line: 274
expression: fast_stack_outputs
---
StackOutputs {
    elements: [
        16,
        15,
        14,
        13,
        12,
        11,
        10,
        9,
        8,
        7,
        6,
        5,
        4,
        40,
        28868,
        107780,
    ],
}
